Almost done with the search page, solved issue with overlaping of the 'to searchfield'.

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     border-radius: 30px;
 }
 
-.landing-section {
+.section {
     width: 90%;
     height: 30%;
     display: flex;
@@ -62,4 +62,85 @@ body {
        
 .continue-btn:active {
     box-shadow: inset 0px 7px 7px rgba(0, 0, 0, 0.5);
+}
+
+#search-window {
+    width: 90%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.time-section {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.time-btn {
+    width: 80px;
+    height: 40px;
+    background: #4D8C2D;
+    border: 1px solid #C4C4C4;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 35px;
+    color: lightgray;
+}
+
+.time-btn:hover {
+    cursor: pointer;
+    border: 1px solid white;
+}
+       
+.time-btn:active {
+    box-shadow: inset 0px 7px 7px rgba(0, 0, 0, 0.5);
+}
+
+.btn-pressed {
+    box-shadow: inset 0px 7px 7px rgba(0, 0, 0, 0.5); 
+}
+
+#departure-section {
+    margin-bottom: 40px;
+}
+
+#time-select {
+    width: 90%;
+    height: 90%;
+    background: #4D8C2D;
+}
+
+#map {
+    width: 100vw;
+    height: 20%;
+    position: absolute;
+    bottom: 130px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.mapboxgl-ctrl-geocoder {
+    max-width: 100%;
+    border: 1px solid #000000;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.geocoder {
+    max-width: 300px;
+    height: 50px;
+    margin: 20px;
+}
+
+#geocoder-start ul {
+    z-index: 1001;
+}
+
+
+.hide {
+    visibility:hidden
 }
